# rustaxum

./: .cursorrules  .dockerignore  .env  .env.example  .env.production  .env.staging  .env.testing  .gitignore  ACTIVITY_LOG.md  ACTIVITY_LOGGING_IMPLEMENTATION.md  API_DOCUMENTATION.md  ARTISAN.md  AUTH_DEMO.md  CACHE.md  CLAUDE.md  Cargo.toml  Dockerfile  E2EE_CHAT_IMPLEMENTATION_PLAN.md  README.md  SEEDERS.md  STORAGE.md  TEMPLATES.md  WEB_AUTH_DEMO.md  cookies.txt  diesel.toml  docker-compose.yaml  token_response.json
data/seeders/: README.md  cities.csv  countries.csv  districts.csv  provinces.csv  villages.csv
docs/: API_DOCUMENTATION.md  API_USAGE_GUIDE.md  ARTISAN.md  AUTH_DEMO.md  BROADCASTING_SYSTEM.dd.md  E2EE_CHAT_IMPLEMENTATION_PLAN.md  EVENT_SYSTEM.dd.md  FORM_REQUESTS.md  JOB_SYSTEM_DOCUMENTATION.dd.md  MAIL_SYSTEM.dd.md  MFA_ADVANCED_METHODS.md  MFA_ARCHITECTURE_DIAGRAM.md  MFA_COMPLETE_IMPLEMENTATION.md  MFA_QUICK_START.md  MFA_README.md  OAUTH2.md  OAUTH2_COMPREHENSIVE_GUIDE.md  OAUTH2_IMPLEMENTATION_EXAMPLES.md  OAUTH_API_DOCUMENTATION.md  QUERY_BUILDER.dd.md  QUERY_BUILDER.md  SEEDERS.md  STORAGE.md  TEMPLATES.dd.md  WEB_AUTH_DEMO.md  WEB_PUSH_SETUP.md
examples/: activity_log_usage.rs  advanced_template_demo.rs  cache_demo.rs  form_request_example.rs  generate_docs.rs  logging_demo.rs  logging_test.rs  query_builder_example.rs  relationships_demo.rs  simple_form_request_test.rs  template_demo.rs  validation_example.rs
public/: push-notifications.js  sw.js
resources/views/: dashboard.hbs  template-showcase.hbs
resources/views/auth/: change-password.hbs  forgot-password.hbs  login.hbs  register.hbs  reset-password.hbs
resources/views/components/: alert.hbs
resources/views/csrf/: form.hbs  success.hbs
resources/views/dashboard/: index.hbs
resources/views/emails/: order-confirmation.hbs  welcome.hbs
resources/views/layouts/: app.hbs  auth.hbs  dashboard.hbs  main.hbs
resources/views/mfa/: settings-all-methods.hbs  settings.hbs  setup.hbs  verify.hbs
resources/views/oauth/: device-error.hbs  device-success.hbs  device-verification.hbs
resources/views/pages/: home.hbs
resources/views/partials/: alert.hbs  breadcrumb.hbs  card.hbs  flash-messages.hbs  form-input.hbs  loading-spinner.hbs  modal.hbs  pagination.hbs
src/: lib.rs  main.rs  schema.rs
src/app/: activity_log.rs  mod.rs  validation.rs
src/app/broadcasting/: helpers.rs  mod.rs  websocket.rs
src/app/controllers/: auth_controller.rs  city_controller.rs  country_controller.rs  job_level_controller.rs  job_position_controller.rs  mod.rs  permission_controller.rs  post_controller.rs  role_controller.rs  user_controller.rs
src/app/demo/: communication_demo.rs  mod.rs
src/app/docs/: extractor.rs  mod.rs  oauth.rs
src/app/events/: mod.rs  user_registered_event.rs
src/app/helpers/: csrf_helpers.rs  mod.rs
src/app/http/: form_request.rs  mod.rs
src/app/jobs/: activity_logged_job.rs  bulk_web_push_job.rs.bak  database_queue_driver.rs  mod.rs  process_payment_job.rs  queue_worker.rs  send_email_job.rs  web_push_cleanup_job.rs.bak
src/app/listeners/: mod.rs  send_welcome_email_listener.rs
src/app/mail/: mod.rs  order_shipped_mail.rs  password_reset_mail.rs  welcome_mail.rs
src/app/middleware/: auth.rs  logging.rs  mod.rs  oauth.rs  passport_middleware_test.rs  role_middleware.rs
src/app/models/: activity_log.rs  algorithm_compatibility_matrix.rs  attribute.rs  city.rs  conversation.rs  conversation_participant.rs  country.rs  decimal_wrapper.rs  device.rs  device_capabilities.rs  device_fingerprints.rs  device_presence.rs  device_push_tokens.rs  device_session_backups.rs  diesel_ulid.rs  district.rs  encrypted_backup_keys.rs  events.rs  forward_history.rs  joblevel.rs  jobposition.rs  jobs.rs  message.rs  message_delivery_status.rs  message_device_keys.rs  message_mentions.rs  message_reactions.rs  mfa_backup_email.rs  mfa_biometric.rs  mfa_email_code.rs  mfa_push.rs  mfa_sms.rs  mfa_trusted_device.rs  mfa_webauthn.rs  mfamethod.rs  migration.rs  mod.rs  notification.rs  oauth_ciba_auth_codes.rs  oauth_ciba_requests.rs  (+33 more)
src/app/notifications/: invoice_paid_notification.rs  mod.rs  notifiable.rs  notification.rs  order_shipped_notification.rs  welcome_notification.rs
src/app/policies/: README.md  base_policy.rs  examples.rs  job_level_policy.rs  job_position_policy.rs  mod.rs  policy_service.rs  policy_trait.rs  post_policy.rs  user_organization_policy.rs
src/app/query_builder/: audit_loader.rs  builder.rs  examples.rs  executor.rs  filter.rs  include.rs  mod.rs  pagination.rs  response.rs  role_permission_loader.rs  service.rs  sort.rs  traits.rs
src/app/resources/: mod.rs  user_organization_resource.rs  user_resource.rs
src/app/rules/: mod.rs  (+1 more)
src/cache/: manager.rs  mod.rs
src/cli/: main.rs  mod.rs
src/config/: activity_log.rs  app.rs  auth.rs  broadcasting.rs  cache.rs  csrf.rs  database.rs  events.rs  logging.rs  mail.rs  mod.rs  notifications.rs  oauth.rs  session.rs  storage.rs  webpush.rs
src/database/: connection.rs  migration_runner.rs  mod.rs  seeder.rs
src/logging/: channels.rs  facade.rs  formatters.rs  mod.rs  writers.rs
src/query_builder/: bind.rs  builder.rs  cache.rs  filter.rs  filter_group.rs  includes.rs  mod.rs  params.rs  scopes.rs  select.rs  sort.rs
src/routes/: api.rs  mod.rs  oauth.rs  web.rs
src/storage/: filesystem.rs  macros.rs  manager.rs  mod.rs
templates/: dashboard.html
templates/auth/: change-password.html  forgot-password.html  login.html  register.html  reset-password.html
templates/layouts/: app.html  auth.html
tests/: activity_log_tests.rs  activity_logging_test.rs  additional_validator_tests.rs  auth_integration_tests.rs  auth_middleware_test.rs  auth_service_tests.rs  communication_tests.rs  mod.rs  oauth_integration_test.rs  password_validation_tests.rs  user_model_tests.rs  validator_tests.rs
tests/curl/: README.md  api-comprehensive-tests.sh  auth-tests.sh  me-endpoint-tests.sh  run-tests.sh
tests/k6/: README.md  api-comprehensive.js  auth.js  me-endpoint.js  package.json
tests/unit/: mod.rs
(+420 files in other folders)
