[package]
name = "rustaxum"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustaxum"
path = "src/lib.rs"

[[bin]]
name = "rustaxum"
path = "src/main.rs"

[[bin]]
name = "artisan"
path = "src/cli/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
ulid = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
anyhow = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.3.1"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
clap = { version = "4.0", features = ["derive"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
mime_guess = "2.0"
thiserror = "1.0"
# Cloud storage dependencies
aws-sdk-s3 = "1.49"
aws-config = "1.5"
aws-credential-types = "1.2"
google-cloud-storage = "0.21"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_core = "0.21"
url = "2.5"
base64 = "0.22"

[dev-dependencies]
axum-test = "15.0"
tokio-test = "0.4"
mockall = "0.13"
serial_test = "3.1"