[package]
name = "rustaxum"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustaxum"
path = "src/lib.rs"

[[bin]]
name = "rustaxum"
path = "src/main.rs"

[[bin]]
name = "artisan"
path = "src/cli/main.rs"

[[example]]
name = "template_demo"
path = "examples/template_demo.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.4", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.3.2", features = ["postgres", "chrono", "uuid", "r2d2", "numeric", "serde_json", "64-column-tables"] }
diesel_migrations = "2.3.0"
ulid = { version = "1.2", features = ["serde"] }
totp-rs = "5.7.0"
qrcode = "0.14.1"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.38", features = ["serde", "db-diesel-postgres"] }
regex = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
anyhow = "1.0"
argon2 = "0.5"
jsonwebtoken = "9.3.1"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
clap = { version = "4.5", features = ["derive"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.10"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
mime_guess = "2.0"
thiserror = "2.0"
# Cache dependencies
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
# Cloud storage dependencies
aws-sdk-s3 = "1.106"
aws-config = "1.8"
aws-credential-types = "1.2"
google-cloud-storage = "1.0"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_core = "0.28"
url = "2.5"
base64 = "0.22"
# OAuth2 dependencies
oauth2 = "5.0"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12", features = ["json"] }
pkcs8 = { version = "0.10", features = ["pem"] }
rsa = "0.9"
urlencoding = "2.1"
csv = "1.3"
# OpenAPI documentation dependencies
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "ulid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-rapidoc = { version = "6.0", features = ["axum"] }
utoipa-redoc = { version = "6.0", features = ["axum"] }
serde_yaml = "0.9"
# Web Push dependencies
web-push = "0.11"
p256 = "0.13"
# Mail and Communication dependencies
html-escape = "0.2"
# Markdown parsing for emails
pulldown-cmark = "0.13"
# Template engine
handlebars = "6.3"
# WebSocket support for broadcasting
tokio-tungstenite = "0.27"
# Additional serialization
toml = "0.9"
bigdecimal = { version = "0.4.8", features = ["serde"] }
hex = "0.4.3"
colored = "3"

[dev-dependencies]
axum-test = "18.1"
tokio-test = "0.4"
mockall = "0.13"
serial_test = "3.2"
